Closed
Bug 455229
Opened 17 years ago
Closed 17 years ago
Import from Outlook Express fails to import messages
Categories
(Thunderbird :: Migration, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.0b1
People
(Reporter: fehe, Assigned: sivakrishna)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.21 KB,
patch
|
neil
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9) Gecko/2008052906 Firefox/3.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b1pre) Gecko/20080914030911 Shredder/3.0b1pre
When importing from Outlook Express, no actual messages are imported -- only folders devoid of their actual message content.
Reproducible: Always
Steps to Reproduce:
1. Import messages into Outlook Express, if you don't already have some
2. Ensure you have some message folders in Outlook Express, and that those message folders contain email.
3. Create a new Thunderbird profile
4. Import messages on first prompt or go to Tools --> Import --> Import everything. Click Next and proceed to import Outlook Express Messages
5. Note that the folders were imported, but that no actual messages were imported
6. Now try importing messages using Tools --> Import --> Mail. Click Next and proceed to import Outlook Express Messages
7. Notice now that a folder is created, called "Outlook Express Import," but all folders and subfolders are empty. No messages were imported.
Two other problems to note from the above steps:
1. In Step #4: after selecting "Import everything" and clicking Next, the Back button is grayed out. This problem does not exist with Step #6.
2. In Step #6: Once the import operation is completed, the final dialog is a blank and gray, with cancel being the only button that can be clicked.
Actual Results:
No messages imported.
Question: Why does Thunderbird not have the option to import messages from a file?
Comment 1•17 years ago
|
||
Didn't try a new profile, but:
6. Now try importing messages using Tools --> Import --> Mail. Click Next and
proceed to import Outlook Express Messages
7. Notice now that a folder is created, called "Outlook Express Import," but
all folders and subfolders are empty. No messages were imported.
Does exactly that, creates the folders with no data.
Confirmed.
Status: UNCONFIRMED → NEW
Component: General → Migration
Ever confirmed: true
QA Contact: general → migration
Comment 2•17 years ago
|
||
I assume this used to work on 2.0? [adding regression keyword]
Flags: blocking-thunderbird3+
Keywords: regression
Comment 3•17 years ago
|
||
(In reply to comment #2)
> I assume this used to work on 2.0? [adding regression keyword]
Works with:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.17pre) Gecko/20080821 Lightning/0.8 Thunderbird/2.0.0.17pre ID:2008082103
In nsOEScanBoxes::GetMailboxes(), pass correct location to GetMailboxList() [inline with mailnews/import/oexpress/nsOEScanBoxes.cpp, r1.24].
Attachment #344842 -
Flags: review?(neil)
Updated•17 years ago
|
Attachment #344842 -
Flags: review?(neil) → review+
Comment 5•17 years ago
|
||
Comment on attachment 344842 [details] [diff] [review]
Fixes empty mail import
Ironically I had a CVS tree with r1.24 checked out, but have you noticed that we've actually switched to Mercurial for trunk work?
>+ result = GetMailboxList( pWhere, pArray);
Nit: Could fix the changed lines to use our current whitespace style, which in this case simply means deleting the space after the ( [no new review needed].
Updated•17 years ago
|
Assignee: nobody → sivakrishna
Status: NEW → ASSIGNED
Neil, is it possible to sr this?
Attachment #344842 -
Attachment is obsolete: true
Attachment #346010 -
Flags: review?(neil)
Updated•17 years ago
|
Attachment #346010 -
Flags: superreview+
Attachment #346010 -
Flags: review?(neil)
Attachment #346010 -
Flags: review+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 7•17 years ago
|
||
Comment on attachment 346010 [details] [diff] [review]
Updated as per comment #5
[Checkin: Comment 7]
http://hg.mozilla.org/comm-central/rev/f5b25c33b0bf
with a few additional/related whitespace cleanup.
Attachment #346010 -
Attachment description: Updated as per comment #5 → Updated as per comment #5
[Checkin: Comment 7]
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b1
This bug is only partially fixed. Import works now, but the following, in the original report, has not been fixed:
Two other problems to note from the above steps:
1. In Step #4: after selecting "Import everything" and clicking Next, the Back
button is grayed out. This problem does not exist with Step #6.
2. In Step #6: Once the import operation is completed, the final dialog is a
blank and gray, with cancel being the only button that can be clicked.
Should I open a new bug and make it blocking this or can those be fixed here?
Comment 9•17 years ago
|
||
These seems to be import wizard issues and not related to the outlook express bug.
Now you can mark this bug as verified and file the mentioned bugs (please search for duplicates first and post links to them if you do file them).
| Reporter | ||
Comment 10•17 years ago
|
||
Filed this follow-on bug:
Bug 463971 - Shredder Import dialog is blank instead of showing import results as with Thunderbird 2.0.0.x
And I filed the "Back" button issue as an enhancement request:
Bug 463973 - "Back" button should be available when "Import everything" is selected in Shredder
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•