Bug 455229 - Import from Outlook Express fails to import messages; r+sr=neil